syntax = "proto3";

option csharp_namespace = "GSTORE_Server";

package gstoreservices;

service ServerServices {
	rpc Partition (PartitionRequest) returns (Empty);
	rpc Replication(ReplicationRequest) returns (Empty);
	rpc Status (Empty) returns (Empty);
	rpc Freeze (Empty) returns (Empty);
	rpc Unfreeze (Empty) returns (Empty);
	rpc Crash (Empty) returns (Empty);
}

message Empty {} 

message PartitionRequest {
	string partitionID = 1;
	repeated string servers = 2; 
}

message ReplicationRequest {
	int32 factor = 1;
} 